--- a/sites/all/themes/stevenrovery/assets/scss/app/segment/_projects.scss
+++ b/sites/all/themes/stevenrovery/assets/scss/app/segment/_projects.scss
@@ -4,10 +4,11 @@
 }
 
 .projects-listing {
-	list-style: none;
-	font-size: 100%;
+	width: 100%;
   padding: 0;
   margin: 0;
+	list-style: none;
+	font-size: 100%;
 }
 .projects-listing__item {
 	position: relative;
